Auto height column flexboxes with border and padding are too short https://bugs.webkit.org/show_bug.cgi?id=112398
Reviewed by Tony Chang.

Source/WebCore:

Test: css3/flexbox/auto-height-column-with-border-and-padding.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::mainAxisContentExtent):
computeLogicalHeight expects that you pass in the border-box logicalHeight, not
the contentLogicalHeight. Since we subtract the border, padding and scrollbar height from
the returned m_extent, if we pass in the contentLogicalHeight and the flexbox is auto-sized
then we end up incorrectly subtracting border, padding and scrollbar height from the
contentLogicalHeight.

LayoutTests:

* css3/flexbox/auto-height-column-with-border-and-padding-expected.html: Added.
* css3/flexbox/auto-height-column-with-border-and-padding.html: Added.
* css3/flexbox/resources/flexbox.css:
(.flex-one-one-auto):

Canonical link: https://commits.webkit.org/130767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145937 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/css3/flexbox/resources/flexbox.css
+++ b/LayoutTests/css3/flexbox/resources/flexbox.css
@@ -19,6 +19,10 @@
     -webkit-flex: 1;
     flex: 1;
 }
+.flex-one-one-auto {
+    -webkit-flex: 1 1 auto;
+    flex: 1 1 auto;
+}
 
 .row {
     -webkit-flex-direction: row;
